--- a/NEWS
+++ b/NEWS
@@ -51,6 +51,10 @@
     on local listening sockets for UDP multicast sockets (ZMQ_RADIO).
   See doc/zmq_setsockopt.txt and doc/zmq_getsockopt.txt for details.
 
+* New perf tool, perf/benchmark_radix_tree, to measure the performance of the
+  different internal implementations of the trie algorithm used to track
+  subscriptions. Requires a compiler that supports C++11.
+
 * Many, many coding style, duplication and static analysis improvements.
 
 * Many, many improvements to the CMake build system, especially on Windows.
