--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-0MQ version 4.3.0 stable, released on 20xx/xx/xx
+0MQ version 4.3.0 stable, released on 2018/11/28
 ================================================
 
 * The following DRAFT APIs have been marked as STABLE and will not change
