Problem: 4.3.0 is released, need to update ABI/version
Solution: bump to 5.2.1 and 4.3.1 respectively

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+0MQ version 4.3.1 stable, released on 20xx/xx/xx
+================================================
+
+
 0MQ version 4.3.0 stable, released on 2018/11/28
 ================================================
 
