Finalise changelog for 4.3.1

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-0MQ version 4.3.1 stable, released on 20xx/xx/xx
+0MQ version 4.3.1 stable, released on 2019/01/12
 ================================================
 
 * A vulnerability has been found that would allow attackers to direct a peer to
