--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+0MQ version 4.3.2 stable, released on 20xx/xx/xx
+================================================
+
 0MQ version 4.3.1 stable, released on 2019/01/12
 ================================================
 
