Finalize NEWS and ABI revision for 4.0.9

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-0MQ version 4.0.9 stable, released on 2016/xx/xx
+0MQ version 4.0.9 stable, released on 2019/07/08
 ================================================
 
 * CVE-2019-13132: a remote, unauthenticated client connecting to a
