--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-0MQ version 4.3.2 stable, released on 20xx/xx/xx
+0MQ version 4.3.2 stable, released on 2019/07/08
 ================================================
 
 * CVE-2019-13132: a remote, unauthenticated client connecting to a
